--- a/src/App.css
+++ b/src/App.css
@@ -87,17 +87,41 @@ body {
 .video-grid {
   display: grid;
   grid-template-columns: 1fr;
-  gap: 1rem;
+  gap: 0.1rem 2rem;
   margin: 1rem 0;
 }
 
-.video-grid iframe {
-  width: 100%;
-  height: 200px;
-  border-radius: 5px;
+.video-grid .item a:visited {
+  border-color: #474747;
 }
 
-@media screen and (min-width: 576px) {
+.video-grid a.video-link-element {
+  color: #babbbe;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  padding: 2rem;
+  border: 1px solid #babbbe;
+  border-radius: 3px;
+  text-decoration: none;
+  font-weight: 400;
+}
+
+.play-icon {
+  height: 3rem;
+  width: 3rem;
+  margin-top: -2rem;
+  transform: translateX(1rem);
+}
+
+.video-grid a.video-link-element i {
+  font-size: 3rem;
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
   .video-grid {
     grid-template-columns: repeat(2, 1fr);
   }
@@ -107,28 +131,21 @@ body {
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
   .video-grid {
     grid-template-columns: repeat(3, 1fr);
   }
 
-  .video-grid iframe {
-    height: 140px;
-  }
-}
-
-@media screen and (min-width: 992px) {
-  .video-grid iframe {
-    height: 180px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .video-grid {
-    grid-template-columns: repeat(4, 1fr);
+  .video-grid .item a,
+  .video-grid .item img {
+    transition: all .25s ease-in-out;
   }
 
-  .video-grid iframe {
-    height: 160px;
+  .video-grid .item a:hover {
+    background-color: #2c2c2c;
+  }
+
+  .video-grid .item:hover img {
+    transform: translateX(3rem);
   }
 }
